# sd15-flow-trainer

./: .gitignore  pyproject.toml  requirements.txt
examples/: analysis.py  evaluate_unet.py  inference_shift_test.py  trainer_1.py  trainer_2.py  trainer_smoke_test.py
sd15_trainer_geo/: analyze.py  analyze_post.py  generate.py  modular_pipeline_analysis.txt  pipeline.py  trainer.py  verify_config_pipeline.py
sd15_trainer_geo/config/: __init__.py  model_config.py
sd15_trainer_geo/text_encoder/: __init__.py  base.py
sd15_trainer_geo/text_encoder/analysis/: clip_block_analysis.txt
sd15_trainer_geo/unet/: __init__.py  base.py  base_simplex.py
sd15_trainer_geo/unet/analysis/: unet_block_analysis.txt  unet_standalone_block_analysis.txt
sd15_trainer_geo/vae/: __init__.py  base_vae.py
sd15_trainer_geo/vae/analysis/: vae_block_analysis.txt
